# ASC-ODE-

./: .gitignore  CMakeLists.txt  output_rc.txt  output_test_ode.txt
demos/: demo_legendre.cpp  demo_pendulum.cpp  demo_rc_circuit.cpp  plot_legendre.py  plot_pendulum.py  plot_rc_circuit.py  plotmassspring.py  report.md  test_ode.cpp
docs/: _toc.yml  intro.md  report_part2.md
mechsystem/: CMakeLists.txt  Newmark.hpp  bind_mass_spring.cpp  mass_spring.cpp  mass_spring.hpp  mass_spring.ipynb  test_mass_spring.py
src/: Newton.hpp  autodiff.hpp  implicitRK.hpp  nonlinfunc.hpp  timestepper.hpp
